[gd_scene load_steps=15 format=3 uid="uid://dppvi1vyg8dji"]

[ext_resource type="Script" uid="uid://f85x4vebaw5k" path="res://ui/main_menu.gd" id="1_p8ri8"]
[ext_resource type="Shader" uid="uid://bvppykyi3ougu" path="res://addons/godot_vat/shaders/vat_multiple_anims.gdshader" id="2_ubpvv"]
[ext_resource type="Texture2D" uid="uid://dwumn24lcstx0" path="res://assets/main_menu/normals.png" id="3_arv2f"]
[ext_resource type="Texture2D" uid="uid://dykc1wjrik6og" path="res://assets/main_menu/offsets.exr" id="4_5klac"]
[ext_resource type="Texture2D" uid="uid://bnksxhkflrevj" path="res://assets/main_menu/albedo.png" id="5_lsdqh"]
[ext_resource type="ArrayMesh" uid="uid://cjg36er5i8u6e" path="res://assets/main_menu/SM_Curtains_Mesh.res" id="6_jiymt"]
[ext_resource type="Script" uid="uid://cvuheskkmutg3" path="res://assets/main_menu/vat_multi_mesh_instance_3d.gd" id="7_bgtsx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qard3"]
render_priority = 0
shader = ExtResource("2_ubpvv")
shader_parameter/offset_map = ExtResource("4_5klac")
shader_parameter/normal_map = ExtResource("3_arv2f")
shader_parameter/texture_albedo = ExtResource("5_lsdqh")
shader_parameter/fps = 24.0
shader_parameter/time_alpha = 1.0
shader_parameter/specular = 0.0
shader_parameter/metallic = 0.0
shader_parameter/roughness = 0.0

[sub_resource type="MultiMesh" id="MultiMesh_bbyji"]
transform_format = 1
use_custom_data = true
instance_count = 1
mesh = ExtResource("6_jiymt")
buffer = PackedFloat32Array(1.04694e-38, 9.64288e-39, 1.08367e-38, 1.0102e-38, 8.90819e-39, 6.79589e-39, 1.00102e-38, 4.59184e-39, 8.44894e-39, 9.64289e-39, 1.02857e-38, 1.07449e-38, 0, 0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p8ri8"]
albedo_texture = ExtResource("5_lsdqh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ubpvv"]
albedo_texture = ExtResource("5_lsdqh")

[sub_resource type="Animation" id="Animation_qard3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MainMenu/CurtainsRight:material_override:shader_parameter/time_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0sb5g"]
resource_name = "curtain_open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MainMenu/CurtainsLeft:material_override:shader_parameter/time_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MainMenu/CurtainsLeft")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.85),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MainMenu/CurtainsRight:material_override:shader_parameter/time_alpha")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MainMenu/CurtainsRight")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.86667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hohle"]
_data = {
&"RESET": SubResource("Animation_qard3"),
&"curtain_open": SubResource("Animation_0sb5g")
}

[node name="MainMenu" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.999962, 0.00872654, 0, -0.00872654, 0.999962, 0, 0, 0)
script = ExtResource("1_p8ri8")

[node name="CurtainsLeft" type="MultiMeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.75301, -1.4184, -5.31004)
material_override = SubResource("ShaderMaterial_qard3")
multimesh = SubResource("MultiMesh_bbyji")
script = ExtResource("7_bgtsx")
instance_count = 1
rand_anim_offset = false
animation_tracks = Array[Vector2i]([Vector2i(0, 48)])
metadata/_custom_type_script = "uid://damlqeu0m6ksk"

[node name="CurtainsLeftDebug" type="MeshInstance3D" parent="CurtainsLeft"]
unique_name_in_owner = true
material_override = SubResource("StandardMaterial3D_p8ri8")
mesh = ExtResource("6_jiymt")

[node name="CurtainsRight" type="MultiMeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, -8.75443e-08, 0, 8.75443e-08, 1, 1.77682, -1.418, -5.31)
material_override = SubResource("ShaderMaterial_qard3")
multimesh = SubResource("MultiMesh_bbyji")
script = ExtResource("7_bgtsx")
instance_count = 1
rand_anim_offset = false
animation_tracks = Array[Vector2i]([Vector2i(0, 48)])
metadata/_custom_type_script = "uid://damlqeu0m6ksk"

[node name="CurtainsRightDebug" type="MeshInstance3D" parent="CurtainsRight"]
unique_name_in_owner = true
material_override = SubResource("StandardMaterial3D_ubpvv")
mesh = ExtResource("6_jiymt")

[node name="CurtainAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hohle")
}

[node name="MainUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="UI" type="Control" parent="MainUI"]
modulate = Color(1, 1, 1, 0.843137)
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainUI/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 101.0
offset_right = -368.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/UI/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainUI/UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74.99)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PlaceHolder Title"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MainUI/UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MainUI/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MainUI/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="MainUI/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MainUI/UI/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainUI/UI/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainUI/UI/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainUI/UI/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
